--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        java: ['17', '18']
+        java: ['18']
       fail-fast: false
     name: Base checks (Java ${{ matrix.Java }})
 
